--- a/pacific.css
+++ b/pacific.css
@@ -1,25 +1,62 @@
 body { background-color: #FFFFFF;
       color: #666666;
 	  font-family: Verdana, Arial, sans-serif;
+	  background-image: linear-gradient(to bottom, #3399CC, #C2E0F0, #3399CC);
 }
 header { background-color: #000033;
          color: #FFFFFF;
 		 font-family: Georgia, serif; 
 }
-h1 { line-height: 200%; }
+h1 { line-height: 200%; 
+     background-image: url(sunset.jpg);
+	 background-repeat: no-repeat;
+	 background-position: right;
+	 padding-left: 1em;
+	 height: 72px;
+	 margin-bottom: 0;
+}
 nav { font-weight: bold;
       background-color: #90C7E3; 
 }
 h2 { color: #3399CC;
      font-family: Georgia, serif;
 }
+h3{
+	color: #000033;
+}
+
 dt { color: #000033; 
    font-weight: bold; 
 }
-.resort { color: #000033;
-          font-size: 1.2em;
-}
+
 footer { font-size: .70em;
          font-style: italic;
 		 text-align: center; 
+}
+.resort{
+	color: #000033;
+	font-size: 1.2em;
+}
+dt{
+	color: #000033;
+}
+
+nav a{
+	text-decoration: none;
+	
+}
+
+#homeheader{
+	height: 300px;
+	background-image: url(coast.jpg);
+	background-size: 100% 100;
+	background-repeat: no-repeat;
+}
+#wrapper{
+	width: 80%
+	margin-left: auto;
+	margin-right: auto;
+	background-color: white;
+	min-width: 700px;
+	max-width: 1024px;
 }
