--- a/pacific.css
+++ b/pacific.css
@@ -1,3 +1,4 @@
+<style>
 body { background-color: #FFFFFF;
       color: #666666;
 	  font-family: Verdana, Arial, sans-serif;
@@ -60,3 +61,4 @@ nav a{
 	min-width: 700px;
 	max-width: 1024px;
 }
+</style>
